--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
     <script data-require="angular.js@1.5.8" data-semver="1.5.8" src="https://code.angularjs.org/1.5.8/angular.js"></script>
     
     <script src="data/users/small.js"></script>
+    <script src="data/users/100.js"></script>
     <script src="js/app.js"></script>
     
     <script src="js/controllers/main.ctrl.js"></script>
