fixes directory structure to feature based, fixes structure and gulpfile.js to serve files from /dist directory

--- a/app/features/userProfiles/myUserProfile.html
+++ b/app/features/userProfiles/myUserProfile.html
@@ -1,9 +1,10 @@
-<a href="{{ user.picture.large }}" target="_blank">
-<div class="overlay">
-    
+<div class="my-user-profile">
+	<a href="{{ user.picture.large }}" target="_blank">
+		<div class="overlay">
 
+			{{ user.name.first|capitalize }}
 
-    {{ user.name.first|capitalize }} 
-    
+		</div>
+	</a>
+
 </div>
-    </a>
