adds <geom-color-toggle> directive

--- a/app/index.html
+++ b/app/index.html
@@ -103,10 +103,10 @@
 
     <h2>1st Square</h2>
 
-    <my-square></my-square>
+    <my-square geom-color-toggle></my-square>
 
     <h3>2nd square</h3>
-    <my-square></my-square>
+    <my-square geom-color-toggle></my-square>
 
     <div class="clearfix"></div>
     
@@ -127,6 +127,8 @@
     <!--<script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
     <!--<script data-require="angular.js@1.5.8" data-semver="1.5.8" src="https://code.angularjs.org/1.5.8/angular.js"></script>-->
     
+
+    <script src="js/lib/shared.js"></script>
     <script src="js/lib/sprintf.min.js"></script>
 
     <!--<script src="lib/angular-1.4.0/angular.js"></script>-->
