make makes directive <my-user-profile/> work with <my-closeable/> and also makes styling for the <my-user-profile/> encapsulated within local files

--- a/app/features/domExtra/closeable.html
+++ b/app/features/domExtra/closeable.html
@@ -2,7 +2,10 @@
     <div ng-transclude></div>
 
     <div class="controls">
-        <button ng-click="onClose()">[x]</button>
+        <!--<button ng-click="onClose()">[x]</button>-->
+        <span class="glyphicon glyphicon-remove" 
+              ng-click="onClose()">
+        </span>
         <!--<i class="close"></i>-->
     </div>
 </div>
