--- a/app/features/navbar/navbar.html
+++ b/app/features/navbar/navbar.html
@@ -16,7 +16,11 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-				<li><a href="#">Link</a></li>
+
+				<li><a href="#/main">Main</a></li>
+				<li><a href="#/team/1">Team 1</a></li>
+
+
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 					<ul class="dropdown-menu">
@@ -30,13 +34,13 @@
 					</ul>
 				</li>
 			</ul>
-			<form class="navbar-form navbar-left">
+			<!--<form class="navbar-form navbar-left">
 				<div class="form-group">
 					<input type="text" class="form-control" placeholder="Search">
 				</div>
 				<button type="submit" class="btn btn-default">Submit</button>
-			</form>
-			<ul class="nav navbar-nav navbar-right">
+			</form>-->
+			<!--<ul class="nav navbar-nav navbar-right">
 				<li><a href="#">Link</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -48,12 +52,9 @@
 						<li><a href="#">Separated link</a></li>
 					</ul>
 				</li>
-			</ul>
+			</ul>-->
 		</div>
 		<!-- /.navbar-collapse -->
 	</div>
 	<!-- /.container-fluid -->
 </nav>
-
-
-
