--- a/app/index.html
+++ b/app/index.html
@@ -12,75 +12,19 @@
 	<title>Hello =={{ name }}==</title>
 </head>
 
-<body ng-controller="mainCtrl as $ctrl">
+<body>
 
-  <navbar></navbar>
+	<navbar></navbar>
 
-  <div class="navbar-spacer"></div>
-
-	<div my-closeable>
-		<h1>Hello {{ name }}!</h1>
-	</div>
-
-	<my-circle my-closeable></my-circle>
-
-	<input type="text" ng-model="name" ng-keyup="onKeyUp()">
+	<div class="navbar-spacer"></div>
 
 
-	<button ng-click="openModal()">Open modal</button>
-
-	<my-sample></my-sample>
+	<ng-view></ng-view>
 
 
-	<div class="clearfix"></div>
 
-    <div class="selection-panel">
-		<section>
-			<ul class="users">
-				<li>
-					<add-user on-add="onAddUser()"></add-user>
-				</li>
-				<li ng-repeat="user in users">
-					<my-user-profile user="user" on-user-clicked="onTeamAdd(user)" />
-				</li>
-			</ul>
-
-		</section>
-		<aside>
-			<ul class="users">
-				<li ng-repeat="user in team">
-					<my-user-profile user="user"/>
-				</li>
-			</ul>
-		</aside>
-
-	</div>
-
-
-	<hr/>
-
-	<h2>1st Square</h2>
-
-	<my-square geom-color-toggle></my-square>
-
-	<h3>2nd square</h3>
-	<my-square geom-color-toggle></my-square>
-
-	<div class="clearfix"></div>
-
-	<!--<hr/>
-    <div my-sample></div>
-    <hr/>-->
-
-	<!--<my-sample></my-sample>-->
-
-
-	<div class="wrapper-my-square-grid">
-		<my-square-grid count="count" name="sampleData">something inside grid</my-square-grid>
-	</div>
 
 	<!--<script data-require="jquery@2.2.4" data-semver="2.2.4" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>-->
-
 	<script src="js/lib/jquery-2.2.4.min.js"></script>
 	<!--<script data-require="bootstrap@3.3.6" data-semver="3.3.6" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>-->
 	<!--<script data-require="angular.js@1.5.8" data-semver="1.5.8" src="https://code.angularjs.org/1.5.8/angular.js"></script>-->
@@ -92,10 +36,11 @@
 
 	<!--<script src="lib/angular-1.4.0/angular.js"></script>-->
 	<script src="js/lib/angular-1.5.8/angular.js"></script>
+	<script src="js/lib/angular-1.5.8/angular-route.min.js"></script>
+	
 	<script src="js/lib/ui-bootstrap-tpls.js"></script>
 
 	<script src="js/app.js"></script>
-
 </body>
 
 </html>
